<resources>
    <string name="app_name">GFaim</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="type">• Type : </string>
    <string name="price">• Prix : </string>
    <string name="status">• Statut : </string>
    <string name="schedule">• Horaires : </string>
    <string name="timeToWait">• Temps d\'attente : </string>
    <string name="Events">Evenements</string>
    <string name="feedback">Avis</string>
    <string name="description">Description</string>

    <string name="title_activity_restaurateur">Gérer Restaurant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="description_restaurant">Ce tacos est un super tacos \nAchat de tacos en tout genre.\nMenu et frites etc …</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="llorem">llorem ipsum est value</string>
    <string name="vegan">Vegan</string>
    <string name="terrasse">Terrasse</string>
    <string name="wifi">Wi-FI</string>
    <string name="cb_card">Carte Bleue</string>
    <string name="restaurantName">Tacos du campus</string>
    <string name="carte">Carte</string>
    <string name="avis1">Bon tacos mais dommage qu\'il ne soit pas plus light !</string>
    <string name="avis2">Excellent ! J\'y vais tous les jours ! </string>
    <string name="avis3">Bof bof bof ! On a vu mieux, n\'est-ce pas ? </string>
    <string name="Estelle">Estelle Lepeigneux</string>
    <string name="presentation">Présentation</string>
    <string name="eventDescription">Soirée barbecue au tacos ! Venez Nombreux mes petits canards !</string>
    <string name="dateEvent">Samedi 16 janvier</string>
    <string name="eventTitle">Soirée tacos</string>
    <string name="dash"> - </string>
    <string name="avis">avis</string>
    <string name="min">min</string>
    <string name="Pierre">Pierre Jarsaillon</string>
    <string name="choose">OK</string>
    <string name="title">Indiquez vos allergies</string>
    <string name="Régime">Régime</string>
    <string name="selectionerAllergies">Sélectionner les allergies</string>
    <string name="cloose">OK</string>
    <string name="menu_tile">Menu</string>
    <string name="advanced_search">Recherche avancée</string>
    <string name="type_restaurants">Type de restaurants</string>
    <string name="titleChooseRestaurant">Sélectionne les à partir de tes favoris</string>
    <string name="Lundi">Lundi</string>
    <string name="Mardi">Mardi</string>
    <string name="Mercredi">Mercredi</string>
    <string name="Jeudi">Jeudi</string>
    <string name="Vendredi">Vendredi</string>
    <string name="Samedi">Samedi</string>
    <string name="Dimanche">Dimanche</string>
    <string name="search_hint">Nom du restaurant...</string>
    <string name="title_activity_search">SearchActivity</string>


</resources>
